--- a/client/loginRegister.html
+++ b/client/loginRegister.html
@@ -11,17 +11,23 @@
     <div class="container">
         <form id="loginForm" class="form" style="display: flex;">
           <h2>Iniciar Sesión</h2>
-          <input class="input" type="email" placeholder="Correo electrónico" required>
-          <input class="input" type="password" placeholder="Contraseña" required>
+          <input class="input" name="email" type="email" placeholder="Correo electrónico" required>
+          <div class="email error"></div>
+          <input class="input" name="password" type="password" placeholder="Contraseña" required>
+          <div class="password error"></div>
           <p>¿No tienes una cuenta? <a href="#" onclick="toggleForm()">Registrarse</a></p>
           <button type="submit">Iniciar Sesión</button>
         </form>
+
         <form id="registerForm" class="form">
           <h2>Registrarse</h2>
-          <input class="input" type="text" placeholder="Nombre" required>
-          <input class="input" type="email" placeholder="Correo electrónico" required>
-          <input class="input" type="password" placeholder="Contraseña" required>
-          <input class="input" type="password" placeholder="Codigo de Registro" required>
+          <input class="input" name="name" type="text" placeholder="Nombre" required>
+          <input class="input" name="email" type="email" placeholder="Correo electrónico" required>
+          <div class="email error"></div>
+          <input class="input" name="password" type="password" placeholder="Contraseña" required>
+          <div class="password error"></div>
+          <input class="input" name="code" type="password" placeholder="Codigo de Registro" required>
+          <div class="code error"></div>
           <button type="submit">Registrarse</button>
           <p>¿Ya tienes una cuenta? <a href="#" onclick="toggleForm()">Iniciar sesión</a></p>
         </form>
