--- a/server/client/loginRegister.html
+++ b/server/client/loginRegister.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     
 </head>
 <body>
@@ -32,6 +32,6 @@
           <p>¿Ya tienes una cuenta? <a href="#" onclick="toggleForm()">Iniciar sesión</a></p>
         </form>
       </div>
-      <script src="js/loginRegister.js"></script>
+      <script src="../js/loginRegister.js"></script>
 </body>
 </html>
