--- a/client/main.html
+++ b/client/main.html
@@ -54,12 +54,12 @@
             <button id="finish-upload-btn">Finalitzar</button>
         </section>
 
-        <section class="controls"style="display:none;">
+        <section class="videoBatch" id="videoBatch" style="display:none;">
             <video id="video" autoplay playsinline muted></video>
             <div>
-                <button id="startButton" >Iniciar Grabación</button>
-                <button id="stopButton" >Finalizar Grabación</button>
-                <button id="finishButton">Finalizar Completamente</button>
+                <button id="startButton" >Iniciar Gravació</button>
+                <button id="stopButton" >Pausar Gravació</button>
+                <button id="finishButton">Finalitzar Completament</button>
             </div>
         </section>
 
