Creacio de carpeta usuari

--- a/client/main.html
+++ b/client/main.html
@@ -14,7 +14,7 @@
     <h4>Code make by Jordi Sánchez</h4>
     <section class="container">
         <section class="header">
-            <button id="documentation">Main</button>
+            <button id="main">Main</button>
             <button id="documentation">Documentació</button>
             <button id="filter">Sessions</button>
             <div class="profile-dropdown">
