--- a/client/main.html
+++ b/client/main.html
@@ -55,10 +55,10 @@
 
         <section class="videoBatch" id="videoBatch" style="display:none;">
             <video id="video" autoplay playsinline muted></video>
-            <div>
-                <button id="startButton" >Iniciar Gravació</button>
-                <button id="stopButton" >Pausar Gravació</button>
-                <button id="finishButton">Finalitzar Completament</button>
+            <div class="videoButtons">
+                <button id="startButton" class="startButton" >Iniciar Gravació</button>
+                <button id="stopButton"class="stopButton" disabled >Pausar Gravació</button>
+                <button id="finishButton"class="finishButton" disabled>Finalitzar Completament</button>
             </div>
         </section>
 
