--- a/client/documentation.html
+++ b/client/documentation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/userDashboard.css">
+    <link rel="stylesheet" href="css/documentation.css">
 </head>
 
 <body>
@@ -28,16 +28,6 @@
             </div>
         </section>
 
-        <section class="newUser-group">
-            <div class="searchU">
-                <label class="input-wrapper" data-text="">
-                    <input id="searchInput" type="text" placeholder="Nom usuari...">
-                </label>
-                <div id="searchResults" class="search-results"></div>
-            </div>
-
-        </section>
-
         <div id="configuration" class="popup">
             <div class="popup-content">
                 <h2>Configuració</h2>
@@ -51,7 +41,6 @@
         </div>
         <script src="js/init.js"></script>
         <script src="js/main.js"></script>
-        <script src="js/userDashboard.js"></script>
 </body>
 
 </html>
