--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -35,7 +35,6 @@
                 </label>
                 <div id="searchResults" class="search-results"></div>
             </div>
-
         </section>
 
         <div id="configuration" class="popup">
@@ -49,9 +48,42 @@
                 <button id="conf-close-btn" class="close-btn">Tancar</button>
             </div>
         </div>
+        
+        <div class="container">
+            <div class="grid-container">
+                <div class="info1">
+                    <h2>Información General</h2>
+                    <div>Número de sessions:<span id="sessionId">0</span></div>
+                    <div>Resultats: <span id="sessionData">0</span></div>
+                </div>
+                <div class="info2">
+                    <h2>Resultats Globals del Video</h2>
+                    <div></div>
+                    
+                </div>
+                <div class="chart1" colspan="2">
+                    <h2>Grafic Face Model</h2>
+                    <canvas id="chart"></canvas>
+                </div>
+                <div class="chart2" colspan="2">
+                    <h2>Grafic Face Model</h2>
+                    <canvas id="chart"></canvas>
+                </div>
+                <div class="chart3" colspan="2">
+                    <h2>Grafic FACS Model</h2>
+                    <canvas id="chart2"></canvas>
+                </div>
+                <div class="calendari" id="calendari"></divclass>
+
+                </div>
+                <section class="sessions" id="sessions">
+                </section>
+            </div>
+        </div>
         <script src="js/init.js"></script>
         <script src="js/main.js"></script>
         <script src="js/userDashboard.js"></script>
+        <script src="js/calendar.js"></script>
 </body>
 
 </html>
