--- a/client/main.html
+++ b/client/main.html
@@ -30,7 +30,7 @@
         <section class="newUser-group">
             <div class="searchU">
                 <label class="input-wrapper" data-text="">
-                    <input id="searchInput" type="text" placeholder="Nom usuari...">
+                    <input id="searchInput" type="text" placeholder="Nom de l'usuari...">
                 </label>
                 <div id="searchResults" class="search-results"></div>
             </div>
