--- a/client/loginRegister.html
+++ b/client/loginRegister.html
@@ -38,7 +38,7 @@
       <p>¿Ya tienes una cuenta? <a href="#" onclick="toggleForm()">Iniciar sesión</a></p>
     </form>
   </div>
-  <script src="../js/loginRegister.js"></script>
+  <script src="/js/loginRegister.js"></script>
 </body>
 
 </html>
