--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/userDashboard.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/userDashboard.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                 <button id="conf-close-btn" class="close-btn">Tancar</button>
             </div>
         </div>
-        
+
         <div class="container sessionContainer" id="sessionContainer" style="display:none;">
             <div class="grid-container">
                 <div class="info1">
@@ -59,7 +59,7 @@
                 <div class="info2">
                     <h2>Resultats Globals del Video</h2>
                     <div></div>
-                    
+
                 </div>
                 <div class="chart1" colspan="2">
                     <h2>Grafic Face Model</h2>
@@ -73,7 +73,8 @@
                     <h2>Grafic FACS Model</h2>
                     <canvas id="chart2"></canvas>
                 </div>
-                <div class="calendari" id="calendari"></divclass>
+                <div class="calendari" id="calendari">
+                    </divclass>
 
                 </div>
                 <section class="sessions" id="sessions">
@@ -81,12 +82,13 @@
             </div>
         </div>
         <div id="errorDiv" class="error-message">
-            L'usuari seleccionat no cap sessió creada.
-          </div>
-        <script src="js/init.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/userDashboard.js"></script>
-        <script src="js/calendar.js"></script>
+            L'usuari seleccionat no té cap sessió creada.
+        </div>
+    </section>
+    <script src="/js/init.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/userDashboard.js"></script>
+    <script src="/js/calendar.js"></script>
 </body>
 
 </html>
