--- a/client/documentation.html
+++ b/client/documentation.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/documentation.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/documentation.css">
 </head>
 
 <body>
@@ -39,8 +39,8 @@
                 <button id="conf-close-btn" class="close-btn">Tancar</button>
             </div>
         </div>
-        <script src="js/init.js"></script>
-        <script src="js/main.js"></script>
+        <script src="/js/init.js"></script>
+        <script src="/js/main.js"></script>
 </body>
 
 </html>
