--- a/client/main.html
+++ b/client/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeelGuard Beta</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -101,9 +101,9 @@
         </div>
 
     </section>
-    <script src="js/init.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/video.js"></script>
+    <script src="/js/init.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/video.js"></script>
 </body>
 
 </html>
