--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -62,15 +62,15 @@
 
                 </div>
                 <div class="chart1" colspan="2">
-                    <h2>Grafic Face Model</h2>
+                    <h2>Grafic Evolitu de les emocions</h2>
                     <canvas id="chart"></canvas>
                 </div>
                 <div class="chart2" colspan="2">
-                    <h2>Grafic Face Model</h2>
+                    <h2>Grafic Evolitu de les emocions TEXT</h2>
                     <canvas id="chart"></canvas>
                 </div>
                 <div class="chart3" colspan="2">
-                    <h2>Grafic FACS Model</h2>
+                    <h2>Grafic Evolitu de les emocions FACE</h2>
                     <canvas id="chart2"></canvas>
                 </div>
                 <div class="calendari" id="calendari">
