Afegit questionari mode

--- a/client/main.html
+++ b/client/main.html
@@ -38,6 +38,11 @@
         </section>
 
         <div class="batchUpload">
+            <label class="custom-checkbox" id="custom-checkbox" style="display:none;">
+                <input type="checkbox" id="questionariMode">
+                <span class="checkmark"></span>
+                <span class="label-text">Mode qüestionari</span>
+            </label>
             <button id="batch-btn" class="batch-btn" style="display:none;">Gravar Sessió</button>
             <button id="upload-btn" class="upload-btn" style="display:none;">Pujar un Vídeo</button>
         </div>
