--- a/client/videoDashboard.html
+++ b/client/videoDashboard.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/videoDashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js" integrity="sha512-UXumZrZNiOwnTcZSHLOfcTs0aos2MzBWHXOHOuB0J/R44QB0dwY5JgfbvljXcklVf65Gc4El6RjZ+lnwd2az2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-zoom/2.0.1/chartjs-plugin-zoom.min.js"></script>
     <title>Dashboard</title>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -28,16 +32,17 @@
             </div>
             <div class="info2">
                 <h2>Resultats Globals del Video</h2>
+                <canvas id="chartGlobal"></canvas>
                 <div></div>
-                
+
             </div>
-            <div class="chart1" colspan="2">
+            <div class="chart1" colspan="3">
                 <h2>Grafic Face Model</h2>
-                <canvas id="chart"></canvas>
+                <canvas id="chart1"></canvas>
             </div>
             <div class="video" colspan="2">
-                <video id="video" controls style="width: 90%;">
-                    <source src="video.mp4" type="video/mp4">
+                <video id="video" controls style="max-width: 90%;">
+                    <source id="video-source" src="" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -49,6 +54,8 @@
             </section>
         </div>
     </div>
+    <script src="/js/colorChart.js"></script>
     <script src="/js/videoDashboard.js"></script>
 </body>
+
 </html>
