--- a/client/videoDashboard.html
+++ b/client/videoDashboard.html
@@ -23,14 +23,19 @@
         </div>
         <div class="grid-container">
             <div class="info1">
-                <h2>Información General</h2>
-                <div>Sesión ID: <span id="sessionId">0</span></div>
-                <div>Data Sessió: <span id="sessionData">0</span></div>
+                <h2>Informació General</h2>
+                <div>Sessió ID: <span id="sessionId">0</span></div>
+                <div>Data de la Sessió: <span id="sessionData">0</span></div>
+                <div>Hora de la Sessió: <span id="sessionHour">0</span></div>
                 <div>Video ID: <span id="videoId">0</span></div>
                 <div>Duració del Video: <span id="videoDuration">0</span></div>
-                <div>Numero de frases: <span id="phraseNumber">0</span></div>
+                <div>Número de frases: <span id="phraseNumber">0</span></div>
             </div>
             <div class="info2">
+                <h2>Información dels Models</h2>
+                
+            </div>
+            <div class="info3">
                 <h2>Resultats Globals del Video</h2>
                 <canvas id="chartGlobal"></canvas>
                 <div></div>
