limpieza de codigo

--- a/client/sessionDashboard.html
+++ b/client/sessionDashboard.html
@@ -45,6 +45,6 @@
             </section>
         </div>
     </div>
-    <script src="/js/sessionDashboard.js"></script>
+    <script src="/js/sessionDashboard/sessionDashboard.js"></script>
 </body>
 </html>
