--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -87,8 +87,8 @@
     </section>
     <script src="/js/init.js"></script>
     <script src="/js/main.js"></script>
-    <script src="/js/userDashboard.js"></script>
-    <script src="/js/calendar.js"></script>
+    <script src="/js/userDashboard/userDashboard.js"></script>
+    <script src="/js/userDashboard/calendar.js"></script>
 </body>
 
 </html>
