--- a/client/videoDashboard.html
+++ b/client/videoDashboard.html
@@ -60,7 +60,9 @@
         </div>
     </div>
     <script src="/js/colorChart.js"></script>
-    <script src="/js/videoDashboard.js"></script>
+    <script src="/js/videoDashboard/createVideoDashboard.js"></script>
+    <script src="/js/videoDashboard/updateVideoDashboard.js"></script>
+    <script src="/js/videoDashboard/analyzeVideoDashboard.js"></script>
 </body>
 
 </html>
