--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -85,6 +85,7 @@
             L'usuari seleccionat no té cap sessió creada.
         </div>
     </section>
+    <script src="/js/colorChart.js"></script>
     <script src="/js/init.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/userDashboard/userDashboard.js"></script>
