--- a/client/videoDashboard.html
+++ b/client/videoDashboard.html
@@ -32,7 +32,7 @@
                 <div>Número de frases: <span id="phraseNumber">0</span></div>
             </div>
             <div class="info2">
-                <h2>Información dels Models</h2>
+                <h2>Informació dels Models</h2>
                 
             </div>
             <div class="info3">
@@ -48,7 +48,7 @@
             <div class="video" colspan="2">
                 <video id="video" controls style="max-width: 90%;">
                     <source id="video-source" src="" type="video/mp4">
-                    Your browser does not support the video tag.
+                   El teu navegador no soporta aquesta tag del video.
                 </video>
             </div>
             <div class="chart2" colspan="2">
