--- a/client/sessionDashboard.html
+++ b/client/sessionDashboard.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/sessionDashboard.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js" integrity="sha512-UXumZrZNiOwnTcZSHLOfcTs0aos2MzBWHXOHOuB0J/R44QB0dwY5JgfbvljXcklVf65Gc4El6RjZ+lnwd2az2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-zoom/2.0.1/chartjs-plugin-zoom.min.js"></script>
 </head>
 <body>
 
@@ -21,7 +24,8 @@
             <div class="info1">
                 <h2>Información General</h2>
                 <div>Sesión ID: <span id="sessionId">0</span></div>
-                <div>Data Sessió: <span id="sessionData">0</span></div>
+                <div>Data de la Sessió: <span id="sessionData">0</span></div>
+                <div>Hora de la Sessió: <span id="sessionHour">0</span></div>
                 <div>Numero de videos: <span id="videosNumber">0</span></div>
             </div>
             <div class="info2">
@@ -45,6 +49,7 @@
             </section>
         </div>
     </div>
+    <script src="/js/colorChart.js"></script>
     <script src="/js/sessionDashboard/sessionDashboard.js"></script>
 </body>
 </html>
