--- a/client/documentation.html
+++ b/client/documentation.html
@@ -12,7 +12,7 @@
 <body>
     <h1>FeelGuard Beta</h1>
     <h4>Aplicació de la intel·ligència artificial en l’anàlisi d’emocions i detecció d’indicis de depressió.</h4>
-    <h4>Code make by Jordi Sánchez</h4>
+    <h4>Code made by Jordi Sánchez</h4>
     <section class="container">
         <section class="header">
             <button id="main">Main</button>
