--- a/client/loginRegister.html
+++ b/client/loginRegister.html
@@ -13,7 +13,7 @@
 
   <h3 class="top-h">Aplicació de la intel·ligència artificial en l’anàlisi d’emocions i detecció d’indicis de
     depressió.</h3>
-  <h3 class="bottom-h">Code make by Jordi Sánchez</h3>
+  <h3 class="bottom-h">Code made by Jordi Sánchez</h3>
 
 
   <div class="container">
