Dashboard User Dynamic

--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -70,8 +70,13 @@
                     <h2>Grafic Evolitu de les emocions</h2>
                     <canvas id="chart"></canvas>
                 </div>
+                <section class="modelButtons">
+                    <button id="faceModelButton" class="modelButton">Face Model</button>
+                    <button id="speechModelButton" class="modelButton">Speech Model</button>
+                    <button id="languageModelButton" class="modelButton">Language Model</button>
+                </section>
                 <div class="calendari" id="calendari">
-                    </divclass>
+                    </div>
 
                 </div>
                 <section class="sessions" id="sessions">
